更新应用配置文件 - 修改application.yml配置

--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -12,7 +12,7 @@ logging.level.org.springframework.boot.autoconfigure.mail: DEBUG
 
 jwt:
   # 设置jwt签名加密时使用的秘钥
-  secret-key: yuyang
+  secret-key: Iceuu
   # 设置jwt过期时间
   ttl: 259200000
   # 设置前端传递过来的令牌名称
