添加环境变量配置模板 - 新增.env.example文件和更新.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@ blog/src/main/resources/application-local.yml
 docker/mysql_data
 docker/backup
 
-.DS_Store
-**/.DS_Store
-
 # 环境变量文件（包含敏感信息，不应上传到 GitHub）
 .env
 .env.local
 .env.production
-.env.staging
+.env.development
+
+.DS_Store
+**/.DS_Store
