更新部署与配置 - 同步Dockerfile与应用配置文件

--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -60,3 +60,16 @@ dromara:
 file:
   dir: ./upload/
 
+server:
+  tomcat:
+    uri-encoding: UTF-8
+  servlet:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+
+spring:
+  messages:
+    encoding: UTF-8
+
