--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -26,8 +26,8 @@ knife4j:
   openapi:
     title: ThriveX 在线API文档
     description: 有些梦虽然遥不可及，但并不是不可能实现!
-    email: liuyuyang1024@yeah.net
-    concat: 刘宇阳
+    email:  1873048956@qq.com
+    concat: 小冷
     url: https://liuyuyang.net
     version: v4.0
     license: Apache 2.0
